@@ -1,3 +1,9 @@
+2013-02-20  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
+
+	* include/error.h (error_message_count): Declare as dllimport.
+	(error_one_per_line): Ditto.
+	(error_print_progname): Ditto.
+
 2013-02-08  Corinna Vinschen  <corinna@vinschen.de>
 
 	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.
